--- a/game/package.json
+++ b/game/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test --sourceMap=false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-and-deploy-gh-pages": "ng build --prod --base-href https://kirilltk.github.io/DungeonIO/ && npx ngh --dir dist/DungeonIO"
   },
   "private": true,
   "dependencies": {
