--- a/game/package.json
+++ b/game/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
+    "start:pwa": "rimraf dist && npm run build && cd dist && http-server -p 4200",
     "test": "ng test --sourceMap=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,7 +22,9 @@
     "@angular/material": "^7.2.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/pwa": "^0.8.9",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.0",
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase": "^5.3.0",
